<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".kotlinCode.login.LoginFragment">
    
    <data>
        <variable
            name="login"
            type="com.udacity.shoestore.SharedViewModel" />
        
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/login_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:fontFamily="@font/roboto"
            android:text="@string/login_info"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/login_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_text" />

        <EditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:ems="10"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loging_button"
            android:onClick="@{() -> login.onLoginButtonPress()}"
            app:layout_constraintBaseline_toBaselineOf="@+id/signin_button"
            app:layout_constraintEnd_toStartOf="@+id/signin_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/signin_button"
            android:onClick="@{() -> login.onLoginButtonPress()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>