<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".kotlinCode.welcome.WelcomeFragment">

    <data>
        <variable
            name="welcome"
            type="com.udacity.shoestore.SharedViewModel" />

    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="@dimen/welcome_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome2_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome2_text"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="@dimen/welcome2_size"
        app:layout_constraintBottom_toTopOf="@+id/nextWelcome_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <Button
        android:id="@+id/nextWelcome_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:shadowColor="#FFFFFF"
        android:text="@string/next_button"
        android:textColor="#E91E63"
        android:onClick="@{() -> welcome.onNextWelcomeButtonPress()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>