<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".kotlinCode.instruction.InstructionFragment">

    <data>
        <variable
            name="instruction"
            type="com.udacity.shoestore.SharedViewModel" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:fontFamily="@font/roboto"
        android:text="@string/instruction_text"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="@dimen/welcome_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instruction2_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/instruction2_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/nextInstruction_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_text" />

    <Button
        android:id="@+id/nextInstruction_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/next_button"
        android:textColor="#673AB7"
        android:onClick="@{() -> instruction.onNextInstructionButtonPress()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>


</layout>